# FEDOT

./: .readthedocs.yml  .travis.yml  README.rst  iris copy.py  iris.py  predictions.csv  pyproject.toml  requirements.txt  submission_copy_iris.csv
.github/: CONTRIBUTING.md
.github/workflows/: amlb-benchmark-tabular.yml  benchmark-tabular.yml  benchmark-tabular123.yml  integration-build.yml  unit-build.yml
fedot/api/api_utils/: api_composer.py
fedot/api/api_utils/assumptions/: task_assumptions.py
fedot/core/operations/evaluation/operation_implementations/models/: boostings_implementations.py
other_requirements/: extra.txt
