[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fedot"
version = "0.0.0"
authors = [{ name = "NSS Lab", email = "itmo.nss.team@gmail.com" }]
description = "Automated machine learning framework for composite pipelines"
readme = "README_en.rst"
requires-python = ">=3.9"
license = { text = "BSD 3-Clause" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "thegolem==0.4.1",
    "numpy>=1.21.0,<2.0.0",
    "pandas>=1.3.0,<2.0.0",
    "scipy>=1.6.0,<2.0.0",
    "dask-ml<2026.0.0",
    "dask<2026.0.0",
    "anytree>=2.8.0",
    "catboost>=0.25.0",
    "lightgbm>=4.6.0",
    "xgboost>=1.4.0",
    "statsmodels>=0.13.0,<0.15.0",
    "ete3>=3.1.0",
    "networkx>=2.4, !=2.7.*, !=2.8.1, !=2.8.2, !=2.8.3",
    "scikit-learn>=1.0.0,<1.7.0",
    "sktime==0.16.1; python_version < '3.10'",
    "sktime>=0.16.1; python_version >= '3.10'",
    "hyperopt==0.2.7",
    "SALib>=1.3.0",
    "scikit-optimize>=0.7.4",
    "matplotlib>=3.3.1",
    "pyvis==0.2.1",
    "seaborn>=0.9.0",
    "func_timeout==4.3.5",
    "joblib>=0.17.0",
    "requests>=2.0",
    "typing>=3.7.0",
    "psutil>=5.9.2",
    "fsspec>=2024",
    "pytest>=6.2.0",
    "testfixtures>=6.18.0"
]

[project.urls]
Homepage = "https://github.com/aimclub/FEDOT"

[project.optional-dependencies]
docs = [
    "sphinx==4.2.0",
    "sphinx_rtd_theme==1.0.0",
    "readthedocs-sphinx-search==0.3.2",
    "sphinxcontrib-details-directive",
    "autodocsumm"
]
examples = [
    "openpyxl==3.0.7"
]
examples_automl = [
    "openpyxl==3.0.7",
    "tpot == 0.12.0",
    "h2o == 3.46.0.6"
]
extra = [
    "tensorflow>=2.8.0; python_version >= '3.9'",
    "torch>=1.9.0",
    "opencv-python>=4.5.5.64",
    "Pillow>=8.2.0",
    "gensim==4.3.2",
    "nltk==3.8.1",
    "protobuf~=3.19.0",
    "giotto_tda>=0.6.0",
    "ripser==0.6.4"
]
profilers = [
    "snakeviz==2.1.0",
    "gprof2dot==2021.2.21",
    "objgraph==3.5.0",
    "memory_profiler==0.58.0"
]

[tool.setuptools]
include-package-data = true
packages = { exclude = ["test*"] }

[tool.setuptools.dynamic]
version = { attr = "fedot.__version__" }