[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fedot"
version = "0.7.5"
authors = [{ name = "NSS Lab", email = "itmo.nss.team@gmail.com" }]
description = "Automated machine learning framework for composite pipelines"
readme = "README_en.rst"
requires-python = ">=3.9"
license = { text = "BSD 3-Clause" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "thegolem==0.4.1",
    "numpy>=1.23.0,<2.0.0",
    "pandas>=1.5.3,<2.0.0",
    "scipy>=1.9.3,<2.0.0",
    "dask-ml<2026.0.0",
    "dask<2026.0.0",
    "anytree>=2.8.0",
    "catboost>=1.1.1",
    "lightgbm>=4.1.0",
    "xgboost>=1.7.0",
    "statsmodels>=0.14.0,<0.15.0",
    "ete3>=3.1.0",
    "networkx>=2.4, !=2.7.*, !=2.8.1, !=2.8.2, !=2.8.3",
    "scikit-learn>=1.1.3,<1.7.0",
    "sktime>=0.16.1",
    "hyperopt==0.2.7",
    "SALib==1.4.6",
    "scikit-optimize>=0.10.1",
    "matplotlib>=3.5.0",
    "pyvis==0.2.1",
    "seaborn==0.11.2",
    "func_timeout==4.3.5",
    "joblib>=1.1.0",
    "requests>=2.28.0",
    "typing>=3.7.0",
    "psutil>=5.9.4",
    "fsspec>=2024.1.0",
    "pytest>=7.2.0",
    "testfixtures>=6.18.0"
]

[project.urls]
Homepage = "https://github.com/aimclub/FEDOT"

[project.optional-dependencies]
docs = [
    "sphinx==4.2.0",
    "sphinx_rtd_theme==1.0.0",
    "readthedocs-sphinx-search==0.3.2",
    "sphinxcontrib-details-directive",
    "autodocsumm"
]
examples = [
    "openpyxl==3.0.7"
]
examples_automl = [
    "openpyxl==3.0.7",
    "tpot==0.12.0",
    "h2o==3.46.0.6"
]
extra = [
    "tensorflow==2.12.1",
    "torch>=2.0.0",
    "opencv-python>=4.6.0.66",
    "Pillow>=9.3.0",
    "gensim==4.3.2",
    "nltk==3.8.1",
    "protobuf>=3.20.3,<5.0.0",
    "giotto_tda>=0.6.0",
    "ripser==0.6.4"
]
profilers = [
    "snakeviz==2.1.0",
    "gprof2dot==2021.2.21",
    "objgraph==3.5.0",
    "memory_profiler==0.58.0"
]

[tool.setuptools]
include-package-data = true
packages.find = { exclude = ["test*"] }